# halfremembered-models

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  handoff.md  justfile
docs/agents/model-mayhem/: README.md  anticipatory-migration.md
docs/agents/observer/: PLAN.md
docs/plans/: init-repo.md
hrserve/: README.md  pyproject.toml
hrserve/hrserve/: __init__.py  audio_utils.py  config.py  fastapi_utils.py  midi_utils.py  model_base.py  orpheus_models.py  orpheus_tokenizer.py  otel_config.py  otel_fastapi.py  process_utils.py  testing.py  vram_monitor.py
hrserve/tests/: __init__.py
services/anticipatory/: README.md  TODO.md  api.py  client.py  pyproject.toml  server.py
services/anticipatory/tests/: conftest.py  test_api.py  test_integration.py
services/audioldm2/: TODO.md  api.py  pyproject.toml  server.py
services/beat-this/: client.py  pyproject.toml  server.py
services/beat-this/tests/: __init__.py
services/clap/: __init__.py  api.py  client.py  pyproject.toml  server.py
services/clap/tests/: __init__.py
services/deepseek/: api.py  pyproject.toml  server.py
services/demucs/: __init__.py  pyproject.toml  server.py
services/demucs/tests/: test_api.py
services/llmchat/: TODO.md  __init__.py  llm.py  openai_types.py  pyproject.toml  server.py  test_vl.py  tool_parser.py
services/llmchat/tests/: __init__.py  test_api.py  test_tool_parser.py
services/musicgen/: api.py  client.py  pyproject.toml  server.py
services/observer/: context_builders.py  gpu_collector.py  gpu_metrics.py  heuristics.py  process_map.py  pyproject.toml  report_generator.py  server.py  system_collector.py
services/observer/tests/: __init__.py  test_api.py  test_collectors.py  test_process_map.py
services/orpheus-base/: api.py  client.py  pyproject.toml  server.py
services/orpheus-bridge/: api.py  client.py  pyproject.toml  server.py
services/orpheus-children/: api.py  client.py  pyproject.toml  server.py
services/orpheus-classifier/: api.py  client.py  pyproject.toml  server.py
services/orpheus-loops/: api.py  client.py  pyproject.toml  server.py
services/orpheus-mono/: api.py  client.py  pyproject.toml  server.py
services/stable-audio/: TODO.md  api.py  pyproject.toml  server.py
services/yue/: FIX_YUE.md  REFACTOR_STATUS.md  api.py  client.py  pyproject.toml  server.py  yue_engine.py
systemd/: README.md  anticipatory.service  audioldm2.service  clap.service  deepseek.service  install.sh  musicgen.service  orpheus-base.service  orpheus-bridge.service  orpheus-children.service  orpheus-classifier.service  orpheus-loops.service  orpheus-mono.service  stable-audio.service  yue.service
