[project]
name = "anticipatory-service"
version = "2.0.0"
description = "Anticipatory Music Transformer - Stanford CRFM music generation"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
    "pytorch-triton-rocm",
    "transformers",
    "anticipation",
    "mido",
    "fastapi",
    "uvicorn",
    "httpx",
    "numpy",
    "hrserve",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

[tool.uv.sources]
hrserve = { path = "../../hrserve", editable = true }
anticipation = { git = "https://github.com/jthickstun/anticipation.git" }
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[tool.pytest.ini_options]
testpaths = ["tests"]
