[project]
name = "musicgen-service"
version = "1.0.0"
description = "MusicGen text-to-music service for halfremembered"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
    "pytorch-triton-rocm",
    "transformers",
    "httpx",
    "numpy",
    "soundfile",
    "librosa",
    "hrserve",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

[tool.uv.sources]
hrserve = { path = "../../hrserve", editable = true }
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "benchmark: marks tests as benchmarks",
]
