[project]
name = "observer-service"
version = "0.1.0"
description = "ROCm GPU observability agent for halfremembered"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "hrserve",
    "construct",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = false

[tool.uv.sources]
hrserve = { path = "../../hrserve", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]
