[project]
name = "yue-service"
version = "1.0.0"
description = "YuE lyrics-to-song service for halfremembered"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
    "pytorch-triton-rocm",

    # YuE dependencies (from repo/requirements.txt)
    "transformers",
    "omegaconf",
    "einops",
    "sentencepiece",
    "tqdm",
    "tensorboard",
    "descript-audiotools>=0.7.2",
    "descript-audio-codec",
    "scipy",
    "accelerate>=0.26.0",

    # Service dependencies
    "httpx",
    "numpy",
    "soundfile",
    "librosa",
    "hrserve",

    # NOTE: descript-audiotools requires protobuf<3.20, which conflicts with
    # newer OTEL versions (require protobuf>=5.0). We use compatible older versions.
    # OTEL still works fine with these versions, just logs a warning.
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

[tool.uv.sources]
hrserve = { path = "../../hrserve", editable = true }
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "benchmark: marks tests as benchmarks",
]
